package thuchanh.CC2_ql_sinh_vien;

public interface ISoSanh<T> {
    int soSanh(T o1, T o2);
}
